src/components/shared/retailers/retailersModal/retailersModal.module.scss
@use '~styles/util/variables.global' as v;
@use '~styles/util/mixins.global' as m;

$bg-opacity: 0.7;
$retailer-gap: 1.5rem;
$menu-label-opacity: 0.3;
$radio-label-opacity: 0.7;
$options-border: 7px;
$options-top-padding: 0.2rem;

.outer {
	bottom: 0;
	color: v.$black;
	height: 0;
	left: 0;
	line-height: 1.3;
	opacity: 0;
	outline: none;
	overflow: hidden;
	position: fixed;
	right: 0;
	top: 0;
	transform: translate(0, 100%);
	transform: translate3d(0, 100%, 0);
	transition: 250ms v.$timing-function;
	width: 0;
	will-change: transform;
	z-index: 999999;
}

.outer:target,
.outer.is-active {
	height: auto;
	opacity: 1;
	transform: translate(0, 0);
	width: auto;
}

.inner {
	background: v.$white;
	border-radius: v.$border-radius;
	box-shadow: 0 0 30px v.$black;
	left: 50%;
	max-height: calc(80vh - (3rem * 2));
	max-width: 100%;
	max-width: 58vw;
	-webkit-overflow-scrolling: touch;
	overflow-x: hidden;
	overflow-y: auto;
	padding: $retailer-gap;
	position: absolute;
	position: relative;
	top: 3rem;
	transform: translateX(-50%);
	transition: max-width 0.25s v.$timing-function,
		margin-left 0.125s v.$timing-function;
	z-index: 20;

	@include m.media('<=desktop') {
		max-width: 75vw;
	}

	@include m.media('<=phone') {
		max-width: 90vw;
	}
}

.close {
	clip: rect(0 0 0 0);
	display: block;
	height: 1px;
	margin: -1px;
	overflow: hidden;
	text-indent: -100px;
}

.close:focus::after {
	outline: 1px dotted;
	outline: -webkit-focus-ring-color auto 5px;
}

.close::before {
	background-color: rgba(v.$black, $bg-opacity);
	bottom: 0;
	content: '';
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	z-index: 10;
}

.close::after {
	@include m.header-text-shadow;

	color: v.$white;
	content: '';
	content: '\D7';
	font-size: 2rem;
	height: 2rem;
	left: auto;
	margin: 1rem 0 1rem 1rem;
	position: absolute;
	right: calc(20vw - 1rem);
	text-align: center;
	text-decoration: none;
	text-indent: 0;
	top: 0;
	vertical-align: middle;
	width: 2rem;
	z-index: 20;

	@include m.media('<=desktop') {
		right: calc(10vw - 1rem);
	}

	@include m.media('<=phone') {
		margin: 0.5rem 0 1rem 1rem;
		right: 0.2rem;
	}
}

.retailers-list {
	align-items: center;
	display: grid;
	grid-auto-rows: 1fr;
	grid-gap: $retailer-gap;
	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
	justify-items: center;

	@include m.media('<=tiny') {
		grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
	}

	@include m.media('<=ultratiny') {
		grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
	}
}

.retailer {
	align-content: center;
	background: v.$ultra-white;
	display: flex;
	height: 100%;
	justify-content: center;
	opacity: 0.2;
	padding: $retailer-gap;
	position: relative;
	transition: 200ms v.$timing-function;
	width: 100%;
}

.show-retailer {
	@include m.neumorphic-intensity(3px, 10px, v.$white, 27%);

	opacity: 1;
	&:hover {
		@include m.neumorphic-intensity(4px, 19px, v.$white, 27%);
	}
}

.retailer-link {
	align-content: center;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	width: 100%;
}

.show-retailer .retailer-link {
	cursor: pointer;
}

.logo {
	margin: 0;
	object-fit: contain;
	width: 100%;
}

.flag {
	opacity: 0.5;
	position: absolute;
	right: 0;
	top: 0;
}

.menu {
	font-family: v.$header-font;
	font-size: 0.8rem;
	margin-bottom: 1rem;
}

.menu-selection {
	@include m.neumorphic-intensity(2px, 7px, v.$white, 23%);

	align-items: center;
	background: v.$white;
	border: 7px solid v.$white;
	border-radius: v.$border-radius;
	display: grid;
	grid-template-columns: minmax(6rem, max-content) 1fr;
	margin: 0 0 0.5rem;
	padding: $options-top-padding 0;
	width: fit-content;

	@include m.media('<=tiny') {
		grid-template-columns: minmax(min-content, auto) 1fr;
		width: 100%;
	}
}

.menu-label {
	color: rgba(v.$black, $menu-label-opacity);
	display: inline-block;
	font-weight: bold;
	margin: 0 1rem 0 0.1rem;
	min-width: 6rem;
	text-align: right;
	text-transform: uppercase;

	@include m.media('<=tiny') {
		margin: 0 0.1rem;
		min-width: min-content;
	}
}

.radio-options-container {
	display: inline-flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: flex-end;
	row-gap: calc(#{$options-top-padding} + #{$options-border});

	@include m.media('<=phone') {
		align-items: stretch;
		flex-direction: column;
		margin-left: 1rem;
		text-align: center;
	}
}

.radio-option {
	appearance: none;
	display: none;
}

.radio-option:checked + label {
	@include m.neumorphic-button(-1px, 5px, v.$white, 28%);

	background: v.$white;
	color: v.$black;
}

.radio-label {
	@include m.neumorphic-intensity(2px, 9px, v.$white, 18%);
	@include m.neumorphic-raised-button(v.$white, 7%);

	border-radius: v.$border-radius/2;
	color: rgba(v.$black, $radio-label-opacity);
	cursor: pointer;
	margin: 0 1rem 0 0;
	padding: 0.2rem 1rem;
	user-select: none;

	@include m.media('<=tiny') {
		margin: 0 0.1rem 0 0;
	}

	@include m.media('<=ultratiny') {
		padding: 0.2rem 0.1rem;
	}

	&:hover {
		@include m.neumorphic-intensity(3px, 11px, v.$white, 18%);
		@include m.neumorphic-raised-button(v.$white, 10%);

		color: v.$black;
	}

	&:active {
		@include m.neumorphic-raised-button(v.$white, 10%, true);
	}
}

.unselect {
	display: none;
	padding: 0.2rem 0.5rem;
}

.show-unselect {
	display: inline;
}

